@@ -7,6 +7,8 @@ Changes in stable release 2.4.20 (not released yet)
 * Fixed a possible endless loop when de-iconifying a transient
   window.
 
+* Reject some invalid GNOME hints.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.19 (30-Sep-2004)
