@@ -1,3 +1,11 @@
+2005-08-04  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/gnome.c (GNOME_ProcessClientMessage):
+	reject some invalid GNOME hints
+
+	* fvwm/stack.c (new_layer):
+	filter out layers < 0
+
 2004-10-17  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/icons.c (DeIconify):
